--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
             <li><a href="#social-media-marketing">Social Media Marketing</a></li>
         </nav>
     </header>
-    <div class="hero"></div>
+    <div class="background"></div>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section class="section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A bird's eye view of a desk with a notepad, a cup of coffee, pencils in a pencil holder, and a laptop. The notebook says 'SEO' in a bubble and around it are the words 'content', 'headings', 'link building', 'mobile compatibility', 'social media', and 'backlink'."/>
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
-        <section class="online-reputation-management">
+        <section class="section">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person sitting a desk with a laptop that reads 'reputation' in all caps and is highlighted in red. The laptop also has images of bar graphs and pie charts."/>
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
-        <section class="social-media-marketing">
+        <section class="section">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A bird's eye view of people sitting at a table with laptops and tablets. Also on the table are thought bubbles that say 'tweet', 'media', 'like', and 'share'."/>
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
     </main>
     <aside class="benefits">
-        <article class="benefit-lead">
+        <article class="article">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="An icon of half of a gear sitting on top of a funnel with an arrow pointing down on the inside. The end of the funnel leads to a small circular icon of a dollar sign."/>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </article>
-        <article class="benefit-brand">
+        <article class="article">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="An icon of a person with a light bulb for a head with soundwaves coming out on either side of the bulb."/>
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </article>
-        <article class="benefit-cost">
+        <article class="article">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="An icon of half a gear connected to three circular icons of a dollar sign."/>
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
