--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     </header>
     <div class="background"></div>
     <main class="content">
-        <section class="section">
+        <section id="search-engine-optimization" class="section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A bird's eye view of a desk with a notepad, a cup of coffee, pencils in a pencil holder, and a laptop. The notebook says 'SEO' in a bubble and around it are the words 'content', 'headings', 'link building', 'mobile compatibility', 'social media', and 'backlink'."/>
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
-        <section class="section">
+        <section id="online-reputation-management" class="section">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person sitting a desk with a laptop that reads 'reputation' in all caps and is highlighted in red. The laptop also has images of bar graphs and pie charts."/>
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
-        <section class="section">
+        <section id="social-media-marketing" class="section">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A bird's eye view of people sitting at a table with laptops and tablets. Also on the table are thought bubbles that say 'tweet', 'media', 'like', and 'share'."/>
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
